--- a/index.html
+++ b/index.html
@@ -19,17 +19,21 @@
     </header>
     <main>
         <div class="botones" id="botones">
-            <div class="btn_enter">
+            <div class="btn enter" id="ingresar">
                 <i class="fas fa-upload"></i>
-                <input type="button" id="ingresar" value="Ingresar libro a la biblioteca">
+                <p>Ingresar libro</p>
             </div>
-            <div class="btn_ver">
+            <div class="btn enter" id="buscar">
+                <i class="fas fa-search"></i>
+                <p>Buscar libro</p>
+            </div>
+            <div class="btn ver" id="ver">
                 <i class="fas fa-eye"></i>
-                <input type="button" id="ver" value="Ver libros de la Biblioteca">
+                <p>Ver libros</p>
             </div>
-            <div class="btn_clear">
+            <div class="btn clear" id="clean">
                 <i class="fas fa-broom"></i>
-                <input type="button" id="clean" value="Limpiar pantalla">
+                <p>Limpiar pantalla</p>
             </div>
         </div>
         <div id="respuesta"></div>
