Se mejora la accesibilidad del boton subir display

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div id="respuesta"></div>
     </main>
-    <a class="up" href="#botones">
+    <a class="up" href="#header">
         <i class="fas fa-chevron-up"></i>
     </a>
 </body>
