Indexación de titulo de la pagina

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/mediaQuery.css">
     <link rel="stylesheet" href="./styles/animations.css">
-    <title>Document</title>
+    <title>Software de inventario para biblioteca</title>
     <script src="biblioteca.js"></script>
     <script src="script.js"></script>
 </head>
