Se inseta icono para la pestana del navegador

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/mediaQuery.css">
     <link rel="stylesheet" href="./styles/animations.css">
     <title>Document</title>
+    <link rel="icon" href="./img/book.jpg" type="image/jpeg">
     <script src="biblioteca.js"></script>
     <script src="script.js"></script>
 </head>
