--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/mediaQuery.css">
     <link rel="stylesheet" href="./styles/animations.css">
-    <title>Document</title>
+    <title>Software de inventario para biblioteca</title>
     <link rel="icon" href="./img/book.jpg" type="image/jpeg">
     <script src="biblioteca.js"></script>
     <script src="script.js"></script>
@@ -37,7 +37,9 @@
                 <p>Limpiar pantalla</p>
             </div>
         </div>
-        <div id="respuesta"></div>
+        <div id="respuesta">
+            <p style="grid-column: -1/1; width: 100%; text-align: center;">¿Que desea hacer?</p>
+        </div>
     </main>
     <a class="up" href="#header">
         <i class="fas fa-chevron-up"></i>
